--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,16 @@ body {
     justify-content: space-between;
 }
 
-
 .container,
 .editor-panel button {
     background: #fff;
 }
+
+.editor-panel button,
+.filter .slider .filter-info {
+    font-size: 14px;
+}
+
 
 /*#endregion */
 
@@ -80,7 +85,6 @@ body {
 /* Buttons per Luminosità, saturazione ecc */
 .editor-panel button {
     height: 40px;
-    font-size: 14px;
     color: #6c757d;
     margin-bottom: 8px;
     border: 1px solid #aaa;
@@ -93,6 +97,23 @@ body {
 .editor-panel .filter button {
     width: calc(100% / 2 - 4px);
 }
+
+.editor-panel .rotate {
+    margin-top: 17px;
+}
+
+.editor-panel .rotate button {
+    width: calc(100% / 4 - 3px);
+}
+
+/* Bottoni del box */
+.rotate button:nth-child(3),
+.rotate button:nth-child(4){
+    font-size: 18px;
+}
+
+/*#region Filter  */
+
 /* Buttons per Luminosità - Effetto active */
 .filter button.active {
     background: #5372f0;
@@ -104,12 +125,29 @@ body {
 }
 
 .filter .slider .filter-info {
-    justify-content: space-between;
     color: #464646;
 }
 
-.editor-panel .rotate button {
-    width: calc(100% / 4 - 3px);
+.filter .slider input {
+    width: 100%;
+    height: 5px;
+    accent-color: #5372f0 ;
+}
+/*#endregion Filter  */
+
+/*#endregion */
+
+/*#region Preview Img */
+.wrapper .preview-img {
+    margin-left: 20px;
+}
+
+.preview-img img {
+    max-width: 490px;
+    max-height: 335px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 /*#endregion */
