--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,13 @@ body {
     justify-content: space-between;
 }
 
+.editor-panel .options,
+.controls {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+} 
+
 .container,
 .editor-panel button {
     background: #fff;
@@ -41,7 +48,6 @@ body {
 .filter .slider .filter-info {
     font-size: 14px;
 }
-
 
 /*#endregion */
 
@@ -149,5 +155,38 @@ body {
     height: 100%;
     object-fit: contain;
 }
+
+/*#endregion */
+
+/*#region Controls */
+.controls button {
+    padding: 11px 20px;
+    font-size: 14px;
+    cursor: pointer;
+    background: #fff;
+    color: #fff;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+.controls .reset-filter,
+.controls .choose-img {
+    border: 1px solid #6c757d;
+}
+
+.controls .reset-filter {
+    color: #6c757d;
+}
+
+.controls .choose-img {
+    background: #6c757d;
+}
+
+.controls .save-img {
+    border: 1px solid #5372f0;
+    background: #5372f0;
+    margin-left: 5px;
+}
+
 
 /*#endregion */
